<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.jayden.ifkakaoclone.extensions.FragmentExtensionKt" />

        <variable
            name="fragment"
            type="com.jayden.ifkakaoclone.view.main.fragment.MenuFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:padding="16dp"
        tools:context=".view.main.fragment.MenuFragment">

        <ImageView
            android:id="@+id/image_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> FragmentExtensionKt.finish(fragment)}"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_go_to_session_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/session_header_title"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_close" />

        <TextView
            android:id="@+id/text_qna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/fragment_menu_qna"
            android:textColor="@color/session_footer_copyright_gray"
            app:layout_constraintBottom_toTopOf="@id/layout_talk_channel"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_talk_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/text_mail_address"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/text_talk_channel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_menu_talk_channel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_talk_channel"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ico_kakaoch"
                app:layout_constraintBottom_toBottomOf="@id/text_talk_channel"
                app:layout_constraintStart_toEndOf="@id/text_talk_channel"
                app:layout_constraintTop_toTopOf="@id/text_talk_channel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/text_mail_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_menu_mail_address"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>